--- a/cubos animados.html
+++ b/cubos animados.html
@@ -27,13 +27,13 @@
      const geometry2 = new THREE.BoxGeometry(2, 3, 3);
      const material2 = new THREE.MeshPhongMaterial({ color: 0xf00fff });//color violeta
      const cube2 = new THREE.Mesh(geometry2, material2);
-     cube2.position.set(-3, 0, 0);
+     cube2.position.set(-3, 0, 0);// usar el atributo para poner los cubos
      scene.add(cube2);
 
      const geometry3 = new THREE.BoxGeometry(1, 2, 2);
      const material3 = new THREE.MeshStandardMaterial({ color: 0xf0f00f });// color amarillo
      const cube3 = new THREE.Mesh(geometry3, material3);
-     cube3.position.set(3, 0, 0);
+     cube3.position.set(3, 0, 0);// usar el atributo para poner los cubos
      scene.add(cube3);
 
      // agregar luz ambiental y direccional codigo buscado y ayudado por chat gpt
